--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 # Ignore the default SQLite database.
 /db/*.sqlite3
 
+# Ignore Ruby Mine file
+.idea
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
