--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@
 
 # Ignore bundler config
 /.bundle
+FACEBOOK_KEY
+TWITTER_KEY
+FACEBOOK_SECRET
+TWITTER_SECRET
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
